--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/outline.css"> -->
   </head>
   <body class="main-page">
     <header class="header">
@@ -15,8 +14,8 @@
           <div class="user-navigation">
             <form class="search-form" action="https://echo.htmlacademy.ru" method="get" name="search-data">
               <label class="visually-hidden" for="search">Поиск по сайту</label>
-              <input class="search-field" type="search" name="search" id="search" placeholder="Поиск по сайту">
-              <button class="search-btn" type="submit">Найти</button>
+              <input class="search-field" type="search" name="search" id="search" placeholder="Поиск по сайту" required>
+              <button class="search-btn" type="submit"><span class="btnfix">Найти</span></button>
             </form>
             <ul class="auth-menu header-auth-menu">
               <li class="auth-item header-auth-item">
@@ -79,9 +78,9 @@
       <section class="promo">
         <div class="container">
           <h2 class="visually-hidden">Промо-блок</h2>
-          <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-1" id="promo-slide-1" checked>
-          <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-2" id="promo-slide-2">
-          <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-3" id="promo-slide-3">
+          <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-1" id="promo-slide-1" tabindex="-1" checked>
+          <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-2" id="promo-slide-2" tabindex="-1">
+          <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-3" id="promo-slide-3" tabindex="-1">
           <ul class="promo-list">
             <li class="promo-item">
               <img class="promo-image" src="img/slider-1.png" width="384" height="486" alt="Палка для селфи">
@@ -248,7 +247,7 @@
           <div class="reference-item">
             <h3 class="reference-item-title main-section-title">О нас</h3>
             <p class="desc reference-desc">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-            <p class="desc reference-desc">Мы можем доставить ваш товар в самые отдаленные точки России! <span class="uppercase-caption">Device</span> работает со многими транспортными компаниями:</p>
+            <p class="desc reference-desc">Мы можем доставить ваш товар в самые отдаленные точки России! <span class="uppercase-text">Device</span> работает со многими транспортными компаниями:</p>
             <ul class="partners-list">
               <li class="partners-item">Деловые Линии</li>
               <li class="partners-item">Автотрейдинг</li>
@@ -259,10 +258,10 @@
           <div class="reference-item">
             <h3 class="reference-item-title main-section-title">Контакты</h3>
             <p class="desc reference-desc">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-            <a class="map-link" href="#">
+            <a class="map-link" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9,+15,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119311/@55.687031,37.5274293,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54cf65f5c8955:0x694710ccd55501e!8m2!3d55.687031!4d37.529618">
               <img class="map-image" src="img/map.png" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
             </a>
-            <a class="btn follow-btn reference-follow-btn" href="#">Напишите нам</a>
+            <a class="btn follow-btn reference-follow-btn feedback-link" href="#">Напишите нам</a>
           </div>
         </div>
       </section>
@@ -299,7 +298,7 @@
               <a class="site-menu-link" href="#">Контакты</a>
             </li>
           </ul>
-          <p class="footer-details">Тел.: +7 (495) 495-95-95</p>
+          <p class="footer-details"><a class="edgefix">Тел.: +7 (495) 495-95-95</a></p>
         </div>
         <ul class="footer-social">
           <li class="social-item">
@@ -329,17 +328,17 @@
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post" name="feedback-data">
         <p class="feedback-item feedback-input-item">
           <label class="feedback-item-title" for="fullname">Ваше имя:</label>
-          <input class="feedback-field" type="text" name="fullname" id="fullname" placeholder="Имя Фамилия">
+          <input class="feedback-field feedback-fullname" type="text" name="fullname" id="fullname" placeholder="Имя Фамилия">
         </p>
         <p class="feedback-item feedback-input-item">
           <label class="feedback-item-title" for="email">Ваш e-mail:</label>
-          <input class="feedback-field" type="email" name="email" id="email" placeholder="email@example.com">
+          <input class="feedback-field feedback-email" type="email" name="email" id="email" placeholder="email@example.com">
         </p>
         <p class="feedback-item feedback-textarea-item">
           <label class="feedback-item-title" for="message">Текст письма:</label>
-          <textarea class="feedback-field" name="message" id="message" placeholder="В свободной форме"></textarea>
+          <textarea class="feedback-field feedback-textarea" name="message" id="message" placeholder="В свободной форме"></textarea>
         </p>
-        <button class="btn follow-btn feedback-btn" type="submit">Отправить</button>
+        <button class="btn follow-btn feedback-btn" type="submit"><span class="btnfix">Отправить</span></button>
       </form>
       <button class="modal-close-btn" type="button">
         <span class="visually-hidden">Закрыть</span>
@@ -353,6 +352,11 @@
         <span class="visually-hidden">Закрыть</span>
       </button>
     </section>
-    <script src="js/popup.js"></script>
+
+    <div class="modal-overlay"></div>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkkJ9QSrgoCjm0VFKdatTVOGZSd-YcwPU&callback=initMap"
+  type="text/javascript"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
