--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Моноподы для селфи – Каталог товаров | HTML Academy: Девайс</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize-min.css">
     <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body class="inner-page">
