--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize-min.css">
     <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body class="main-page">
@@ -81,6 +81,23 @@
           <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-1" id="promo-slide-1" checked>
           <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-2" id="promo-slide-2">
           <input class="visually-hidden promo-radio" type="radio" name="promo-slider" value="promo-slide-3" id="promo-slide-3">
+          <ul class="promo-control-list">
+            <li class="promo-control-item">
+              <label class="promo-control-label" for="promo-slide-1">
+                <span class="visually-hidden">Первый слайд</span>
+              </label>
+            </li>
+            <li class="promo-control-item">
+              <label class="promo-control-label" for="promo-slide-2">
+                <span class="visually-hidden">Второй слайд</span>
+              </label>
+            </li>
+            <li class="promo-control-item">
+              <label class="promo-control-label" for="promo-slide-3">
+                <span class="visually-hidden">Третий слайд</span>
+              </label>
+            </li>
+          </ul>
           <ul class="promo-list">
             <li class="promo-item">
               <img class="promo-image" src="img/slider-1.png" width="384" height="486" alt="Палка для селфи">
@@ -135,23 +152,6 @@
                 </table>
                 <a class="btn follow-btn promo-follow-btn" href="#">Подробнее</a>
               </div>
-            </li>
-          </ul>
-          <ul class="promo-control-list">
-            <li class="promo-control-item">
-              <label class="promo-control-label" for="promo-slide-1">
-                <span class="visually-hidden">Первый слайд</span>
-              </label>
-            </li>
-            <li class="promo-control-item">
-              <label class="promo-control-label" for="promo-slide-2">
-                <span class="visually-hidden">Второй слайд</span>
-              </label>
-            </li>
-            <li class="promo-control-item">
-              <label class="promo-control-label" for="promo-slide-3">
-                <span class="visually-hidden">Третий слайд</span>
-              </label>
             </li>
           </ul>
         </div>
