--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
               </li>
             </ul>
           </div>
-          <div class="site-navigation">
-            <div class="header-catalog-wrapper">
-              <a class="header-catalog-title" href="catalog.html">Каталог товаров</a>
-              <div class="header-catalog-underlay"></div>
+          <ul class="site-menu header-site-menu">
+            <li class="site-menu-item">
+              <a class="site-menu-link header-catalog-title" href="catalog.html">Каталог товаров</a>
+
               <ul class="header-catalog-menu">
                 <li class="header-catalog-item">
                   <a class="header-catalog-link" href="#">Виртуальная реальность</a>
@@ -55,19 +55,18 @@
                   <a class="header-catalog-link" href="#">Квадрокоптеры</a>
                 </li>
               </ul>
-            </div>
-            <ul class="site-menu header-site-menu">
-              <li class="site-menu-item">
-                <a class="site-menu-link" href="#">Доставка</a>
-              </li>
-              <li class="site-menu-item">
-                <a class="site-menu-link" href="#">Гарантия</a>
-              </li>
-              <li class="site-menu-item">
-                <a class="site-menu-link" href="#">Контакты</a>
-              </li>
-            </ul>
-          </div>
+
+            </li>
+            <li class="site-menu-item">
+              <a class="site-menu-link" href="#">Доставка</a>
+            </li>
+            <li class="site-menu-item">
+              <a class="site-menu-link" href="#">Гарантия</a>
+            </li>
+            <li class="site-menu-item">
+              <a class="site-menu-link" href="#">Контакты</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
@@ -222,19 +221,15 @@
           <h2 class="visually-hidden">Бренды</h2>
           <ul class="brands-list">
             <li class="brands-item">
-              <div class="brands-underlay"></div>
               <img class="brands-image" src="img/logo-1.png" width="260" height="100" alt="DJI">
             </li>
             <li class="brands-item">
-              <div class="brands-underlay"></div>
               <img class="brands-image" src="img/logo-2.png" width="260" height="100" alt="SP Gadgets">
             </li>
             <li class="brands-item">
-              <div class="brands-underlay"></div>
               <img class="brands-image" src="img/logo-3.png" width="260" height="100" alt="GoPro">
             </li>
             <li class="brands-item">
-              <div class="brands-underlay"></div>
               <img class="brands-image" src="img/logo-4.png" width="260" height="100" alt="Vive">
             </li>
           </ul>
@@ -261,7 +256,7 @@
             <a class="map-link" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9,+15,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119311/@55.687031,37.5274293,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54cf65f5c8955:0x694710ccd55501e!8m2!3d55.687031!4d37.529618">
               <img class="map-image" src="img/map.png" width="560" height="222" alt="Офис компании по адресу: г. Москва, улица Строителей, 15">
             </a>
-            <a class="btn follow-btn reference-follow-btn feedback-link" href="#">Напишите нам</a>
+            <a class="btn follow-btn reference-follow-btn feedback-link" href="feedback.html">Напишите нам</a>
           </div>
         </div>
       </section>
@@ -348,13 +343,10 @@
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <img class="modal-map-image" src="img/map-big.png" width="960" height="559" alt="Офис компании по адресу: г. Москва, улица Строителей, 15">
-      <iframe class="modal-map-source" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473127!2d37.52742931534853!3d55.68703400453076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1529951504177" width="960" height="559" style="border:0" allowfullscreen></iframe>
       <button class="modal-close-btn" type="button">
         <span class="visually-hidden">Закрыть</span>
       </button>
     </section>
-
-    <div class="modal-overlay"></div>
 
     <script src="js/script-min.js"></script>
   </body>
