--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
           <div class="reference-item">
             <h3 class="reference-item-title main-section-title">Контакты</h3>
             <p class="desc reference-desc">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-            <a class="map-link" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9,+15,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119311/@55.687031,37.5274293,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54cf65f5c8955:0x694710ccd55501e!8m2!3d55.687031!4d37.529618" target="_blank">
+            <div class="map-link">
               <iframe class="map-source" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8996.143968864768!2d37.529661!3d55.688362000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1531333298774" width="560" height="222" allowfullscreen></iframe>
               <img class="map-image" src="img/map.png" width="560" height="222" alt="Офис компании по адресу: г. Москва, улица Строителей, 15">
-            </a>
+            </div>
             <a class="btn follow-btn reference-follow-btn feedback-link" href="feedback.html" target="_blank">Напишите нам</a>
           </div>
         </div>
