The last last fix

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <div class="reference-item">
             <h3 class="reference-item-title main-section-title">Контакты</h3>
             <p class="desc reference-desc">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-            <div class="map-link">
+            <div class="map-link" tabindex="0">
               <iframe class="map-source" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8996.143968864768!2d37.529661!3d55.688362000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1531333298774" width="560" height="222" allowfullscreen></iframe>
               <img class="map-image" src="img/map.png" width="560" height="222" alt="Офис компании по адресу: г. Москва, улица Строителей, 15">
             </div>
@@ -343,7 +343,7 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <iframe class="modal-map-source" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473113!2d37.52742931534853!3d55.68703400453078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1531330669406" width="960" height="559" allowfullscreen></iframe>
+      <iframe class="modal-map-source" tabindex="-1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473113!2d37.52742931534853!3d55.68703400453078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1531330669406" width="960" height="559" allowfullscreen></iframe>
       <img class="modal-map-image" src="img/map-big.png" width="960" height="559" alt="Офис компании по адресу: г. Москва, улица Строителей, 15">
       <button class="modal-close-btn" type="button">
         <span class="visually-hidden">Закрыть</span>
